--- a/track003_java/eclipse/configuration/.settings/org.eclipse.ui.prefs
+++ b/track003_java/eclipse/configuration/.settings/org.eclipse.ui.prefs
@@ -1,2 +1,2 @@
 eclipse.preferences.version=1
-windows.defender.excluded.path=D\:\\joengmin\\jeongmin001\\track003_java\\eclipse\\configuration
+windows.defender.excluded.path=D\:\\jeongmin\\jeongmin001\\track003_java\\eclipse\\configuration
