--- a/workspace/boot001/pom.xml
+++ b/workspace/boot001/pom.xml
@@ -71,33 +71,58 @@
 			<version>2.3.0</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- 	 -->
-		<!-- 	 -->
-		  <dependency>
-          <groupId>org.bgee.log4jdbc-log4j2</groupId>
-          <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
-          <version>1.16</version>
-      </dependency>   
-		<!--  	-->
-		<!--  	-->
+		<!-- 		 -->
+		<!-- 		 -->
+		<dependency>
+		    <groupId>org.bgee.log4jdbc-log4j2</groupId>
+		    <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+		    <version>1.16</version>
+		</dependency>	
+		<!-- 		 -->
+		<!-- 		 -->
 		<!-- https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect -->
-	    <!-- 추가 -->
-	    <dependency>
-	        <groupId>nz.net.ultraq.thymeleaf</groupId>
-	        <artifactId>thymeleaf-layout-dialect</artifactId>
-	    </dependency>   
-	    <!-- 추가 -->
-	          <!-- 추가 -->
-      <!-- img upload   start -->
-      <!-- img upload   start -->
-      <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<!-- 추가 -->
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+		</dependency>	
+		<!-- 추가 -->
+		<!-- img upload	start -->
+		<!-- img upload	start -->
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
+		<!-- img upload end -->
+		<!-- img upload end -->			
+		<!-- 추가 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<!-- 추가 -->  
+   	  <!-- 추가 -->
+      <!-- 추가 -->
       <dependency>
-          <groupId>commons-fileupload</groupId>
-          <artifactId>commons-fileupload</artifactId>
-          <version>1.3.1</version>
-      </dependency>
-      <!-- img upload end -->
-      <!-- img upload end -->   
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-oauth2-client</artifactId>
+      </dependency>  
+      <dependency>
+         <groupId>com.google.code.gson</groupId>
+         <artifactId>gson</artifactId>
+         <!-- <version>2.8.2</version> -->
+      </dependency>  
+      <!-- api -->
 	</dependencies>
 
 	<build>
