--- a/workspace/boot001/src/main/resources/application.properties
+++ b/workspace/boot001/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=boot001
 ###################################
 spring.main.web-application-type=servlet
 server.port=8484
-server.servlet.context-path=/boot001
+#server.servlet.context-path=/boot001
 spring.main.banner-mode=off
 
 ###################################
@@ -49,7 +49,10 @@ upload.path=/upload/**
 resource.path=C:/upload
 
 
-
+###################################
+###         OAUTH			 	###
+###################################
+spring.profiles.include=oauth
 
 
 
