--- a/workspace/boot001/pom.xml
+++ b/workspace/boot001/pom.xml
@@ -123,6 +123,12 @@
          <!-- <version>2.8.2</version> -->
       </dependency>  
       <!-- api -->
+        <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+      <dependency>
+         <groupId>javax.mail</groupId>
+         <artifactId>mail</artifactId>
+         <version>1.4.7</version>
+      </dependency>
 	</dependencies>
 
 	<build>
