--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ eclipse/
 Thumbs.db
 
 # application-oauth.properties 파일 무시
-/boot001/src/main/resources/application-oauth.properties
-
+/workspace//boot001/src/main/resources/application-oauth.properties
+google.client.id=${GOOGLE_CLIENT_ID}
+ google.client.secret=${GOOGLE_CLIENT_SECRET}
+  openai.api.key=${OPENAI_API_KEY}
 
