--- a/workspace/boot001/pom.xml
+++ b/workspace/boot001/pom.xml
@@ -129,6 +129,13 @@
          <artifactId>mail</artifactId>
          <version>1.4.7</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/net.nurigo/javaSDK -->
+	<dependency>
+	    <groupId>net.nurigo</groupId>
+	    <artifactId>javaSDK</artifactId>
+	    <version>2.2</version>
+	</dependency>
+      
 	</dependencies>
 
 	<build>
