--- a/workspace/boot001/src/main/resources/application.properties
+++ b/workspace/boot001/src/main/resources/application.properties
@@ -54,7 +54,9 @@ resource.path=C:/upload
 ###################################
 spring.profiles.include=oauth
 
-
+#coolsms
+sms_key=NCSYWPXZC1PAQQ2V
+sms_secret=XE7HXBTAUK66VPAXHSQV7WEXG8NDCHAZ
 
 
 
