--- a/workspace/boot001/pom.xml
+++ b/workspace/boot001/pom.xml
@@ -110,32 +110,40 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-		<!-- 추가 -->  
-   	  <!-- 추가 -->
-      <!-- 추가 -->
-      <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-oauth2-client</artifactId>
-      </dependency>  
-      <dependency>
-         <groupId>com.google.code.gson</groupId>
-         <artifactId>gson</artifactId>
-         <!-- <version>2.8.2</version> -->
-      </dependency>  
-      <!-- api -->
-        <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
-      <dependency>
-         <groupId>javax.mail</groupId>
-         <artifactId>mail</artifactId>
-         <version>1.4.7</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/net.nurigo/javaSDK -->
-	<dependency>
-	    <groupId>net.nurigo</groupId>
-	    <artifactId>javaSDK</artifactId>
-	    <version>2.2</version>
-	</dependency>
-      
+		<!-- 추가 -->
+		<!-- 추가 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>  
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<!-- <version>2.8.2</version> -->
+		</dependency>  
+		<!-- api -->
+		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+		<!-- COOLSMS -->
+		<!-- COOLSMS -->
+		<!-- https://mvnrepository.com/artifact/net.nurigo/javaSDK -->
+		<dependency>
+		    <groupId>net.nurigo</groupId>
+		    <artifactId>javaSDK</artifactId>
+		    <version>2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.13.5</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
